crates/eden-database/tests/snapshots/should_insert_mc_login_event_from_mc_account.snap
---
source: crates/eden-database/src/model/mc_login_event.rs
expression: event
input_file: crates/eden-database/tests/snapshots
---
McLoginEvent {
    id: e8b6254a-f39b-4a68-9744-708fd82eef54,
    player_uuid: 00000000-0000-0000-0000-000000000000,
    created_at: Timestamp(
        1970-01-02T10:17:36Z,
    ),
    ip_address: 127.0.0.1,
    username: Some(
        "john1",
    ),
    edition: Java,
    member_id: Some(
        Id(12345),
    ),
}
